[package]
name = "logup"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.12", features = ["json"] }
chrono = "0.4.39"